add import path alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,10 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "paths": {
+      "#root/*": ["./*"]
+    },
+    "baseUrl": ".",
 
     /* Linting */
     "strict": true,
@@ -19,6 +23,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["."],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
